--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "main": "webpack.config.js",
     "dependencies": {
         "@babel/polyfill": "^7.12.1",
+        "accordion-js": "^3.1.1",
         "animate.css": "^4.1.1",
         "bootstrap": "^3.4.1",
         "flickity": "^2.2.2",
